--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     background-repeat: no-repeat;
     margin: 0px;
     padding: 0px;
+    height: 100%;
 }
 
 .menu-bar{
@@ -108,6 +109,38 @@ body{
     color: white;
     font-size: 80%;
     font-family: Helvetica, sans-serif;
+}
+
+.date{
+    height: 15px;
+    width: auto;
+    padding-right: 15px;
+    font-weight: bold;
+    float: right;
+    color: white;
+    font-size: 80%;
+    font-family: Helvetica, sans-serif;
+}
+
+.glass{
+    height: 12px;
+    width: 12px;
+    padding-right: 20px;
+    float: right;
+}
+
+.wifi{
+    height: 13px;
+    width: 25px;
+    padding-right: 15px;
+    float: right;
+}
+
+.terminal-back{
+    background-color: gray;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 img{
