--- a/style.css
+++ b/style.css
@@ -164,6 +164,8 @@ body{
     min-width: fit-content;
     padding-top: .8%;
     font-family: Helvetica, sans-serif;
+    color: gray;
+    font-weight: bold;
 }
 
 #inner-terminal{
@@ -178,44 +180,37 @@ body{
     z-index: 999;
 }
 
-#example-command{
-    min-width: fit-content;
-    min-height: fit-content;
-    padding-left: 2%;
-    padding-top: 1.2%;
-    color: gray;
-    font-family: Helvetica, sans-serif;
-}
-
-#error{
-    min-width: fit-content;
-    min-height: fit-content;
-    padding-top: 1.5%;
-    color: red;
-}
-
-input{
-    width: 150%;
-    margin-top: 2%;
-    color: gray;
-    font-family: Helvetica, sans-serif;
-    resize: none;
-    font-weight: bold;
-    font-size: 12pt;
-}
-
-#command{
-    background-color: transparent;
-    border-color: transparent;
-    outline: transparent;
-    font-family: Helvetica, sans-serif;
-}
-
-.new-lines{
+#prompt{
     color: white;
-    min-width: fit-content;
-    min-height: fit-content;
-    font-family:  A Std, monospace;
+    font-family: Courier, monospace;
+    font-weight: bold;
+    padding-top: 1%;
+}
+
+#firstoption{
+    background-color: gray;
+    color: red;
+    font-family: Courier, monospace;
+    font-weight: bolder;
+    font-size: 200%;
+    width: 70%;
+    margin-left: 5%;
+    margin-top: 2%;
+    height: 5%;
+    margin-bottom: 2%;
+    text-align: center;
+    border-radius: 25px;
+}
+
+#secondoption{
+    background-color: green;
+    font-family: Courier, monospace;
+    font-weight: bolder;
+    font-size: 200%;
+    width: 30%;
+    margin-left: 5%;
+    height: 5%;
+
 }
 
 img{
